Fix layout: wrap image inside input area and use flexbox

--- a/style.css
+++ b/style.css
@@ -77,20 +77,23 @@ body {
   background-color: rgb(47, 0, 122);
 }
 
-/* Fixed image on the far right, aligned with input */
+/* Style the image */
 #headerImage {
   height: 65px;
   width: auto;
   border: 3px solid hsl(59, 100%, 50%);
+  /* NO position fixed */
 }
-
 
 /* Responsive fix for small screens */
 @media (max-width: 600px) {
+  #inputArea {
+    flex-direction: column;
+    align-items: flex-start;
+  }
   #headerImage {
-    position: static; /* or relative */
     height: 40px;
-    margin-top: 1em; /* add some spacing */
+    margin-top: 1em;
     border: 2px solid hsl(59, 100%, 50%);
   }
 }
